--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     ports:
       - "8000:8000"
     command: sh -c "
-      python manage.py migrate
+      python manage.py migrate && python manage.py csu
       && python manage.py runserver 0.0.0.0:8000
       "
     depends_on:
